fixed spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -354,7 +354,7 @@ template {
 header {
   background-color: #ffecb3;
   padding-top: 24px;
-  padding-bottom: 16px;
+  padding-bottom: 24px;
 }
 
 .nav-left {
