--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -20,7 +20,7 @@
 header{
     background-color: #ffecb3;
     padding-top: 24px;
-    padding-bottom:16px;
+    padding-bottom: 24px;
     
 }
 
